# serializer version: 1
# name: test_compile[YAMLConfigFile-20240323]
  '''
  {'notes': [{'areas': ['gtd'],
              'body': ' #gtd pomodoro',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 1,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'p': '1'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': ['own'],
              'body': ' #own Buy rubber duck',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 2,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'p': '2'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +zorg Parametrize test_run_compile()',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 3,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['zorg'],
              'properties': {'p': '2'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +zorg Move models.py and file_groups.py',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 4,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['zorg'],
              'properties': {'p': '3'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +zorg Add links to grammar',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 5,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['zorg'],
              'properties': {'p': '3'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +zorg Fix grammar so it works with this file',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 6,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['zorg'],
              'properties': {'p': '4'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +zorg Add this file to test data',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 7,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['zorg'],
              'properties': {'p': '5'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +zorg Filter out all numeric tag names',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 8,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['zorg'],
              'properties': {'p': '5'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +zorg Test against all examples/ files',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 9,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['zorg'],
              'properties': {'p': '6'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': " +zorg wip: Replace 'john@' with '%john'",
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 10,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['zorg'],
              'properties': {'p': '6'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +laundry dry whites',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 11,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['laundry'],
              'properties': {'p': '7'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +zorg wip: migrate people',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 12,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['zorg'],
              'properties': {'p': '7'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': " +zorg Finished 'john@' to '%john' migration",
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 13,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['zorg'],
              'properties': {'p': '8'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +zorg Updated grammar to handle quotes',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 14,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['zorg'],
              'properties': {'p': '9'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +laundry wip: fold darks',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 15,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['laundry'],
              'properties': {'p': '10'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +laundry fold darks',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 16,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['laundry'],
              'properties': {'p': '11'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +laundry wash delicates',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 17,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['laundry'],
              'properties': {'p': '12'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' +zorg [[xmind/zorg_e2e_query_arch.xmind]]',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 18,
              'links': ['xmind/zorg_e2e_query_arch.xmind'],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['zorg'],
              'properties': {'p': '14'},
              'status': <NoteStatus.NOTE: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-basic]
  '''
  {'notes': [{'areas': [],
              'body': ' First note in first block',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 1,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Second note in first block',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 2,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' bazbuz is ok too...',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 3,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.OPEN_TODO: 2>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-links]
  '''
  {'notes': [{'areas': [],
              'body': ' Some note with a [[bar.sh]] link to a bash script.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 1,
              'links': ['bar.sh'],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Some note with a link in parens (see [[baz]]).',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 2,
              'links': ['baz'],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Some note with a link in parens and a block-level link '
                      '([[buz::fuzz]]).',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 3,
              'links': ['buz::fuzz'],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-multiblocks]
  '''
  {'notes': [{'areas': [],
              'body': ' Some todo',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 1,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.OPEN_TODO: 2>},
             {'areas': [],
              'body': ' Another related todo',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 2,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.OPEN_TODO: 2>},
             {'areas': [],
              'body': ' A note about life...',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 3,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Some other todo',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 4,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.OPEN_TODO: 2>},
             {'areas': [],
              'body': ' With a note',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 5,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Some note in section 0',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 6,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Note A1',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 7,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Note A2',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 8,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Note B',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 9,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Note C',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 10,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Note D',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 11,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Note E',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 12,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-priority]
  '''
  {'notes': [{'areas': [],
              'body': ' 2024-03-13 High Priority TODO',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 13, 0, 0),
              'ident': 1,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'A',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.OPEN_TODO: 2>},
             {'areas': [],
              'body': ' 2024-03-13 Medium Priority TODO',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 13, 0, 0),
              'ident': 2,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'B',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.OPEN_TODO: 2>},
             {'areas': [],
              'body': ' 2024-03-13 Low Priority TODO',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 13, 0, 0),
              'ident': 3,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.OPEN_TODO: 2>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-property]
  '''
  {'notes': [{'areas': [],
              'body': ' 2024-03-30 This note contains a key::value pair.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 30, 0, 0),
              'ident': 1,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'key': 'value', 'p': '1'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' This todo is @due today! | due::2024-03-13',
              'child_note_ids': [],
              'contexts': ['due'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 2,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'due': '2024-03-13', 'p': '1'},
              'status': <NoteStatus.OPEN_TODO: 2>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-scrambled_prj_notes]
  '''
  {'notes': [{'areas': [],
              'body': ' Sqtdicu Gfwebkj: fdxd://rd/czge-nxgz-vmuncaf',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 1,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Reqzlu Zkba Inzlqq Zusqxur: '
                      'pclx://hn/oqdu-syxf-oxzpzp-hxdszea',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 2,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Tzus %clyzajrm: +cmeq ylevgv frxb gevcfp xa 26cb',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 3,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': ['clyzajrm'],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/cmeq'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Eongcgfy tho pscz giwq arjebc@?',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 4,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/saxy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Crxekimyx kq fjboaq:',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 5,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/saxy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Lcnoajccb Injdqwlf',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 6,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/saxy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Lrry-Jhfv Nfsw',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 7,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/saxy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Ga Ewwnanwqgoq',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 8,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/saxy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Gaonrjmk: Cbnuev, Xvdgisy, Aeyfbb?',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 9,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/saxy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Vont ywgotqe vndsv (lfqbnlfar, kwmnafb, '
                      'Yneicgqi/Mxvvkclvzk)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 10,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/saxy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Eyfptapyh ijmfacppn (lqrui ?jr=HF)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 11,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/saxy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Gziien fxfmhul',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 12,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/saxy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Ajfn dz Rhyt (ty 6499 cw 6075)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 13,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/saxy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' setw://fq/zfv-haow-micxv',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 14,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/judo/vfntwi'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' sorj',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 15,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/judo/vfntwi'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' '
                      'bhkh://xzywfi3/relyocplej/dpw/qk/otehzx/qpsiyunh/rgthilw_sldeu/fonvlqflxv/rjluzb/tbf/hrtkdrq_mnurg_eltj_szkb.raja',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 16,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 15,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/judo/vfntwi'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' '
                      'knlo://evfkaz3/kmxgifnodz/wav/nz/idlwsr/oslzcscp/raarqgi_bjfdp/xftsdpbcka/itulza/prk/pkgxzoc_zgntm_txeg_npbvju.jldf',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 17,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 15,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/judo/vfntwi'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' ykseciqhy IG: bp/531522711',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 18,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/judo/vennc'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Nyhha trra://hk/wyp-slg-lbyuqz pris oiqf nywj kg smoy '
                      'nwdraivpht() cu jzusgcwm zwyirs?',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 19,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/bmlakcr'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Wouvp rx cmmi jk zes r kv/u1abtunoeaorevyolmef: "Njwb '
                      'opjiv wlyvyfrb; tqcwkrs qlawalk: 200F."',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 20,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/bmlakcr/lozmhqjd'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' e2.0 xrestv rlqt cszmjhp: 1) Cnelcge 2) uttnzeu tncj 3) '
                      'Rasemja zzvilcys',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 21,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/bmlakcr/wjybwa'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Qtvhtfc ywtyvbppqu (qs odvqdfjk nydxt):',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 22,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/bmlakcr/wjybwa'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' XC: Wvlotmog | Akjrgluk cck dpvcvia',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 23,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 22,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/bmlakcr/wjybwa'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Oers Higwy   | NYS / Cyuxu fyod mrfwalatc',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 24,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 22,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/bmlakcr/wjybwa'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Lveg         | Kfvunvqioefmgo Rlqu',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 25,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 22,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/bmlakcr/wjybwa'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' HU: Yoxlnl   | Kyahuurpzq mt VV (v.u. boh coveshbg rsp '
                      'hbyhmm-pav)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 26,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 22,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/bmlakcr/wjybwa'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' TbuburbQuf zilo '
                      'hpfu://wz/ytg:hep_epzc_ek_jehnmz?h=omm:cpdu :\n'
                      '    (2576796, 2584174, 2585902, 2611556, 2612222) ',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 27,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/jws_pkaft'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Kmue izlgeghae jivs kkhoh:\n'
                      '    (23068288959, 23070555923, 23071198233, 23081557400, '
                      '23082128453)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 28,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/jws_pkaft'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' KU onbf',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 29,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Adah wv wsr: Pwyv qrykrmat',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 30,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 29,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Fjdu lk aozqwmt rdtv (ingu yhlzh kha zro zstolomj?): '
                      'Vujflym',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 31,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 29,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Cyuyngz rpzj (<tzcx_zm> nat <iqge_xqu>): Opalekb / Ubq '
                      'hefcgpa',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 32,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 29,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Snke udr djwhji ku iysauiroj (<wtflgi_jw_aykjvl>):',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 33,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 29,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Puny mng lomkrpd',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 34,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 33,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Eipahnv',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 35,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 33,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' <olxh_cqe>',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 36,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 33,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Fe dxiovcyxz kuirhi: Kjwjjl hxd: '
                      '<lllwcz_bp_mjklvt>\\wZkzuguo/yckqyt: <awqxbdj>',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 37,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 33,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Nid bzvqqd gktb uhwgmwk jfiwf atukar oq znzg-htqz bpba?: '
                      '(<izljyv_dk_ebsiqu>)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 38,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 33,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Poxi hdtlblgq:',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 39,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 33,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Uripbc uui qr njuytfkxf',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 40,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 39,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Dvfbqlk/ignpsr lb imwgiazpd',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 41,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 39,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Rb rnfqqbizlps',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 42,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 39,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Wuxpotyb:',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 43,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Me fkf zddkb?',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 44,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 43,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' An fsqw hdegvhwy?',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 45,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 43,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Tyrgbh iwj fcq jjuea qpltzla rkyq br at DS tfvwjwf?',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 46,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Rmy [[eswz_xqow::empiz_ljyiwjbmi_szstj]]',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 47,
              'links': ['eswz_xqow::empiz_ljyiwjbmi_szstj'],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/rgw_sxtvx'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' '
                      'nejo/vpe/gjggaa/fwi/kgrtqhtdy/ynbwnm/qekadk/cvhc/MqgomkswAgbkGhthPoqfvqt.ednt',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 48,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/rgw_sxtvx/zv_jzdd_djqa'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' '
                      'qiuz/adb/lhwggp/kqt/ldmqosmbs/qtjvrxutayfiyh/oocyfjbnuih/jmov/faaat/XibsjbhuFsbuRrawDgfksjcXwjudTvvzbxa.vvep',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 49,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/rgw_sxtvx/zv_jzdd_djqa'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Ajbss udcor xf tylgpk:',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 50,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/ipyt/bqf/cpv_mociy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' ibmxadcdz.iwmdvsxeg_uxzvuntgl',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 51,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 50,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/ipyt/bqf/cpv_mociy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' oiuglzpuv.xwhjvfwrs_imjxfgwoo.fvyclrkt_vqycmgeuj_ihblc',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 52,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 50,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/ipyt/bqf/cpv_mociy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' '
                      'ycdcddvhw.shmlpcnju_chsokpadf.bcpgad_hoargfl_fhzshiqoe_qrsrxtdsq',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 53,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 50,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/ipyt/bqf/cpv_mociy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' bpeijqkwt.ysazfxpem_tnpnkohdy.nppowgku_kqhexqeih_njhno',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 54,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 50,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/ipyt/bqf/cpv_mociy'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' uceq://ap/591285707',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 55,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/ipyt/bqf/uahi'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Git [[desd_cd_kdzb.yhdxx]] hgq lkl[1] @dzwk',
              'child_note_ids': [],
              'contexts': ['dzwk'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 56,
              'links': ['desd_cd_kdzb.yhdxx'],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/vd_clxi/xoao'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Mcjr bdukfjxm 14521206',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 57,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/vd_clxi/okwz'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Spuekgphn 14521428',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 58,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/vd_clxi/okwz'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Necywz met td fuvbdooge 14524967',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 59,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/vd_clxi/okwz'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Fbtqtkb, fywupn qr mzrgsvqve 14521641',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 60,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/vd_clxi/okwz'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Uc lsmpfxhtkyh 14522952',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 61,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/vd_clxi/okwz'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Ikr lr 20 pggmb',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 62,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/fgifr'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Ttx-yecb mxovcuwbc',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 63,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/fgifr'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Rzq-itde mpfj',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 64,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/fgifr'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Zee-lpfg uqogce bk khxsvgrkq bbgvmf',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 65,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['arms/fgifr'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-subnotes]
  '''
  {'notes': [{'areas': [],
              'body': ' foobar',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 1,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'p': '1'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' This todo is due::2024-03-30 and has some subnotes',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 2,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'due': '2024-03-30', 'p': '1'},
              'status': <NoteStatus.OPEN_TODO: 2>},
             {'areas': [],
              'body': ' Todo subnote A',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 3,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 2,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'p': '1'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Todo subnote B',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 4,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 2,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'p': '1'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Todo subsubnote C',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 5,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 4,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'p': '1'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' This note has many subnotes.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 6,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'p': '1'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' 2024-03-30 This note contains a key::value pair.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 30, 0, 0),
              'ident': 7,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 6,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'key': 'value', 'p': '1'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' bazbuz',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 8,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 6,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'p': '1'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' pig',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 9,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 6,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'p': '1'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' is fat',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 10,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 9,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'p': '1'},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' is stinky',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 11,
              'links': [],
              'next_note_id': None,
              'parent_note_id': 9,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {'p': '1'},
              'status': <NoteStatus.NOTE: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-subsections]
  '''
  {'notes': [{'areas': [],
              'body': ' Note about A1',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 1,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Note about something',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 2,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Another note',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 3,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' A todo for something',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 4,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.OPEN_TODO: 2>},
             {'areas': [],
              'body': ' A note on the second section.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 5,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' A sub-note.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 6,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' And another note.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 7,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Some foobar todo.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 8,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.OPEN_TODO: 2>},
             {'areas': [],
              'body': ' This is inside of h4_section!',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 9,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' A note on the third section.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 10,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' A sub-note.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 11,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' And another note.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 12,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': [],
              'body': ' Some foobar todo.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 13,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.OPEN_TODO: 2>},
             {'areas': [],
              'body': ' This is the final section!',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 14,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-tags]
  '''
  {'notes': [{'areas': ['tags'],
              'body': ' Some note',
              'child_note_ids': [],
              'contexts': ['fat_pig'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 1,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['foobar'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': ['tags', 'thoughts'],
              'body': ' When I talk to %pig I always want to @puke.',
              'child_note_ids': [],
              'contexts': ['fat_pig', 'puke'],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 2,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': ['pig'],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['foobar/bazbuz'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>},
             {'areas': ['tags'],
              'body': ' Da nah nah nuh...',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'ident': 3,
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'priority': 'C',
              'projects': ['bad/to_the_bone'],
              'properties': {},
              'status': <NoteStatus.NOTE: 1>}]}
  
  '''
# ---
